[package]
name = "cgc"
version = "0.3.0"
authors = ["Adel prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "Compacting garbage collector"
repository = "https://github.com/playXE/cgc"
readme = "README.md"
keywords = ["gc","garbage-collector"]
license = "MIT"

[dependencies]
parking_lot = "0.10"
lazy_static = "1"
time = "0.2"
fxhash = "0.2"
[target.'cfg(target_family = "windows")'.dependencies]
winapi = "0.3.8"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.66"

[profile.release]
debug = true
