[package]
name = "cgc"
version = "0.4.0"
authors = ["Adel prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "Compacting garbage collector"
repository = "https://github.com/playXE/cgc"
readme = "README.md"
keywords = ["gc","garbage-collector"]
license = "MIT"

[dependencies]
parking_lot = "0.10"
lazy_static = "1"
time = "0.2"
fxhash = "0.2"
log = "0.4"
simple_logger = "1"
crossbeam = "0.7"
smallvec = "1.4"
[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi","processthreadsapi","synchapi","sysinfoapi"] }
kernel32-sys = "0.2"


[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[features]
default = []
trace-gc = []